// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`structs should implement structs correctly 1`] = `
{
  "$$type": "MyStruct2",
  "m": Dictionary {
    "_key": {
      "bits": 257,
      "parse": [Function],
      "serialize": [Function],
    },
    "_map": Map {},
    "_value": {
      "parse": [Function],
      "serialize": [Function],
    },
  },
  "s": {
    "$$type": "MyStruct1",
    "a": 1n,
    "b": 2n,
    "c": 3n,
  },
}
`;

exports[`structs should implement structs correctly 2`] = `
{
  "$$type": "MyStruct2",
  "m": Dictionary {
    "_key": {
      "bits": 257,
      "parse": [Function],
      "serialize": [Function],
    },
    "_map": Map {},
    "_value": {
      "parse": [Function],
      "serialize": [Function],
    },
  },
  "s": null,
}
`;

exports[`structs should implement structs correctly 3`] = `
{
  "$$type": "MyMessage1",
  "a": 1n,
  "s": {
    "$$type": "MyStruct2",
    "m": Dictionary {
      "_key": {
        "bits": 257,
        "parse": [Function],
        "serialize": [Function],
      },
      "_map": Map {},
      "_value": {
        "parse": [Function],
        "serialize": [Function],
      },
    },
    "s": {
      "$$type": "MyStruct1",
      "a": 1n,
      "b": 2n,
      "c": 3n,
    },
  },
}
`;

exports[`structs should implement structs correctly 4`] = `
{
  "$$type": "MyMessage1",
  "a": 2n,
  "s": {
    "$$type": "MyStruct2",
    "m": Dictionary {
      "_key": {
        "bits": 257,
        "parse": [Function],
        "serialize": [Function],
      },
      "_map": Map {},
      "_value": {
        "parse": [Function],
        "serialize": [Function],
      },
    },
    "s": null,
  },
}
`;

exports[`structs should implement structs correctly 5`] = `
{
  "$$type": "MyStruct2",
  "m": Dictionary {
    "_key": {
      "bits": 257,
      "parse": [Function],
      "serialize": [Function],
    },
    "_map": Map {},
    "_value": {
      "parse": [Function],
      "serialize": [Function],
    },
  },
  "s": {
    "$$type": "MyStruct1",
    "a": 1n,
    "b": 2n,
    "c": 3n,
  },
}
`;

exports[`structs should implement structs correctly 6`] = `
{
  "$$type": "MyStruct2",
  "m": Dictionary {
    "_key": {
      "bits": 257,
      "parse": [Function],
      "serialize": [Function],
    },
    "_map": Map {},
    "_value": {
      "parse": [Function],
      "serialize": [Function],
    },
  },
  "s": null,
}
`;

exports[`structs should implement structs correctly 7`] = `
{
  "$$type": "MyMessage1",
  "a": 1n,
  "s": {
    "$$type": "MyStruct2",
    "m": Dictionary {
      "_key": {
        "bits": 257,
        "parse": [Function],
        "serialize": [Function],
      },
      "_map": Map {},
      "_value": {
        "parse": [Function],
        "serialize": [Function],
      },
    },
    "s": {
      "$$type": "MyStruct1",
      "a": 1n,
      "b": 2n,
      "c": 3n,
    },
  },
}
`;

exports[`structs should implement structs correctly 8`] = `
{
  "$$type": "MyMessage1",
  "a": 2n,
  "s": {
    "$$type": "MyStruct2",
    "m": Dictionary {
      "_key": {
        "bits": 257,
        "parse": [Function],
        "serialize": [Function],
      },
      "_map": Map {},
      "_value": {
        "parse": [Function],
        "serialize": [Function],
      },
    },
    "s": null,
  },
}
`;

exports[`structs should implement structs correctly 9`] = `
{
  "$$type": "MyStruct2",
  "m": Dictionary {
    "_key": {
      "bits": 257,
      "parse": [Function],
      "serialize": [Function],
    },
    "_map": Map {},
    "_value": {
      "parse": [Function],
      "serialize": [Function],
    },
  },
  "s": {
    "$$type": "MyStruct1",
    "a": 1n,
    "b": 2n,
    "c": 3n,
  },
}
`;

exports[`structs should implement structs correctly 10`] = `
{
  "$$type": "MyStruct2",
  "m": Dictionary {
    "_key": {
      "bits": 257,
      "parse": [Function],
      "serialize": [Function],
    },
    "_map": Map {},
    "_value": {
      "parse": [Function],
      "serialize": [Function],
    },
  },
  "s": null,
}
`;

exports[`structs should implement structs correctly 11`] = `
{
  "$$type": "MyMessage1",
  "a": 1n,
  "s": {
    "$$type": "MyStruct2",
    "m": Dictionary {
      "_key": {
        "bits": 257,
        "parse": [Function],
        "serialize": [Function],
      },
      "_map": Map {},
      "_value": {
        "parse": [Function],
        "serialize": [Function],
      },
    },
    "s": {
      "$$type": "MyStruct1",
      "a": 1n,
      "b": 2n,
      "c": 3n,
    },
  },
}
`;

exports[`structs should implement structs correctly 12`] = `
{
  "$$type": "MyMessage1",
  "a": 2n,
  "s": {
    "$$type": "MyStruct2",
    "m": Dictionary {
      "_key": {
        "bits": 257,
        "parse": [Function],
        "serialize": [Function],
      },
      "_map": Map {},
      "_value": {
        "parse": [Function],
        "serialize": [Function],
      },
    },
    "s": null,
  },
}
`;

exports[`structs should implement structs correctly 13`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.00000003",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "example",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQBZ457fewz6VXFxt1pyO6__ahp6anUoNrSQIjpDZVXnlpJT",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "failed",
        "errorCode": 9,
        "errorMessage": "Cell underflow",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF000000006578616D706C65}",
            "type": "cell",
          },
          "bounce": false,
          "from": "kQBZ457fewz6VXFxt1pyO6__ahp6anUoNrSQIjpDZVXnlpJT",
          "to": "@treasure(treasure)",
          "type": "internal",
          "value": "9.988015",
        },
      },
    ],
  },
]
`;

exports[`structs should implement structs correctly 14`] = `
{
  "$$type": "LongStruct15",
  "x1": 1n,
  "x10": 10n,
  "x11": 11n,
  "x12": 12n,
  "x13": 13n,
  "x14": 14n,
  "x15": 15n,
  "x2": 2n,
  "x3": 3n,
  "x4": 4n,
  "x5": 5n,
  "x6": 6n,
  "x7": 7n,
  "x8": 8n,
  "x9": 9n,
}
`;

exports[`structs should implement structs correctly 15`] = `
{
  "$$type": "LongStruct16",
  "x1": 1n,
  "x10": 10n,
  "x11": 11n,
  "x12": 12n,
  "x13": 13n,
  "x14": 14n,
  "x15": 15n,
  "x16": 16n,
  "x2": 2n,
  "x3": 3n,
  "x4": 4n,
  "x5": 5n,
  "x6": 6n,
  "x7": 7n,
  "x8": 8n,
  "x9": 9n,
}
`;

exports[`structs should implement structs correctly 16`] = `
{
  "$$type": "LongStruct32",
  "x1": 1n,
  "x10": 10n,
  "x11": 11n,
  "x12": 12n,
  "x13": 13n,
  "x14": 14n,
  "x15": 15n,
  "x16": 16n,
  "x17": 17n,
  "x18": 18n,
  "x19": 19n,
  "x2": 2n,
  "x20": 20n,
  "x21": 21n,
  "x22": 22n,
  "x23": 23n,
  "x24": 24n,
  "x25": 25n,
  "x26": 26n,
  "x27": 27n,
  "x28": 28n,
  "x29": 29n,
  "x3": 3n,
  "x30": 30n,
  "x31": 31n,
  "x32": 32n,
  "x4": 4n,
  "x5": 5n,
  "x6": 6n,
  "x7": 7n,
  "x8": 8n,
  "x9": 9n,
}
`;

exports[`structs should implement structs correctly 17`] = `
{
  "$$type": "LongNestedStruct",
  "s1": {
    "$$type": "LongStruct15",
    "x1": 1n,
    "x10": 10n,
    "x11": 11n,
    "x12": 12n,
    "x13": 13n,
    "x14": 14n,
    "x15": 15n,
    "x2": 2n,
    "x3": 3n,
    "x4": 4n,
    "x5": 5n,
    "x6": 6n,
    "x7": 7n,
    "x8": 8n,
    "x9": 9n,
  },
  "s2": {
    "$$type": "LongStruct16",
    "x1": 1n,
    "x10": 10n,
    "x11": 11n,
    "x12": 12n,
    "x13": 13n,
    "x14": 14n,
    "x15": 15n,
    "x16": 16n,
    "x2": 2n,
    "x3": 3n,
    "x4": 4n,
    "x5": 5n,
    "x6": 6n,
    "x7": 7n,
    "x8": 8n,
    "x9": 9n,
  },
  "s3": {
    "$$type": "LongStruct32",
    "x1": 1n,
    "x10": 10n,
    "x11": 11n,
    "x12": 12n,
    "x13": 13n,
    "x14": 14n,
    "x15": 15n,
    "x16": 16n,
    "x17": 17n,
    "x18": 18n,
    "x19": 19n,
    "x2": 2n,
    "x20": 20n,
    "x21": 21n,
    "x22": 22n,
    "x23": 23n,
    "x24": 24n,
    "x25": 25n,
    "x26": 26n,
    "x27": 27n,
    "x28": 28n,
    "x29": 29n,
    "x3": 3n,
    "x30": 30n,
    "x31": 31n,
    "x32": 32n,
    "x4": 4n,
    "x5": 5n,
    "x6": 6n,
    "x7": 7n,
    "x8": 8n,
    "x9": 9n,
  },
  "x1": 1n,
  "x10": 10n,
  "x11": 11n,
  "x12": 12n,
  "x13": 13n,
  "x14": 14n,
  "x15": 15n,
  "x16": 16n,
  "x17": 17n,
  "x18": 18n,
  "x19": 19n,
  "x2": 2n,
  "x20": 20n,
  "x3": 3n,
  "x4": 4n,
  "x5": 5n,
  "x6": 6n,
  "x7": 7n,
  "x8": 8n,
  "x9": 9n,
}
`;

exports[`structs should implement structs correctly 18`] = `
{
  "$$type": "LongNestedStructWithOpts",
  "s1": null,
  "s2": {
    "$$type": "LongStruct16",
    "x1": 1n,
    "x10": 10n,
    "x11": 11n,
    "x12": 12n,
    "x13": 13n,
    "x14": 14n,
    "x15": 15n,
    "x16": 16n,
    "x2": 2n,
    "x3": 3n,
    "x4": 4n,
    "x5": 5n,
    "x6": 6n,
    "x7": 7n,
    "x8": 8n,
    "x9": 9n,
  },
  "s3": {
    "$$type": "LongStruct32",
    "x1": 1n,
    "x10": 10n,
    "x11": 11n,
    "x12": 12n,
    "x13": 13n,
    "x14": 14n,
    "x15": 15n,
    "x16": 16n,
    "x17": 17n,
    "x18": 18n,
    "x19": 19n,
    "x2": 2n,
    "x20": 20n,
    "x21": 21n,
    "x22": 22n,
    "x23": 23n,
    "x24": 24n,
    "x25": 25n,
    "x26": 26n,
    "x27": 27n,
    "x28": 28n,
    "x29": 29n,
    "x3": 3n,
    "x30": 30n,
    "x31": 31n,
    "x32": 32n,
    "x4": 4n,
    "x5": 5n,
    "x6": 6n,
    "x7": 7n,
    "x8": 8n,
    "x9": 9n,
  },
  "x1": 1n,
  "x10": 10n,
  "x11": 11n,
  "x12": 12n,
  "x13": 13n,
  "x14": 14n,
  "x15": 15n,
  "x16": 16n,
  "x17": 17n,
  "x18": 18n,
  "x19": 19n,
  "x2": 2n,
  "x20": 20n,
  "x3": 3n,
  "x4": 4n,
  "x5": 5n,
  "x6": 6n,
  "x7": 7n,
  "x8": 8n,
  "x9": 9n,
}
`;

exports[`structs should implement structs correctly 19`] = `
TupleReader {
  "items": [
    {
      "type": "int",
      "value": 1n,
    },
    {
      "type": "int",
      "value": 2n,
    },
    {
      "type": "int",
      "value": 3n,
    },
    {
      "type": "int",
      "value": 4n,
    },
    {
      "type": "int",
      "value": 5n,
    },
    {
      "type": "int",
      "value": 6n,
    },
    {
      "type": "int",
      "value": 7n,
    },
    {
      "type": "int",
      "value": 8n,
    },
    {
      "type": "int",
      "value": 9n,
    },
    {
      "type": "int",
      "value": 10n,
    },
    {
      "type": "int",
      "value": 11n,
    },
    {
      "type": "int",
      "value": 12n,
    },
    {
      "type": "int",
      "value": 13n,
    },
    {
      "type": "int",
      "value": 14n,
    },
    {
      "type": "int",
      "value": 15n,
    },
  ],
}
`;

exports[`structs should implement structs correctly 20`] = `
TupleReader {
  "items": [
    {
      "type": "int",
      "value": 1n,
    },
    {
      "type": "int",
      "value": 2n,
    },
    {
      "type": "int",
      "value": 3n,
    },
    {
      "type": "int",
      "value": 4n,
    },
    {
      "type": "int",
      "value": 5n,
    },
    {
      "type": "int",
      "value": 6n,
    },
    {
      "type": "int",
      "value": 7n,
    },
    {
      "type": "int",
      "value": 8n,
    },
    {
      "type": "int",
      "value": 9n,
    },
    {
      "type": "int",
      "value": 10n,
    },
    {
      "type": "int",
      "value": 11n,
    },
    {
      "type": "int",
      "value": 12n,
    },
    {
      "type": "int",
      "value": 13n,
    },
    {
      "type": "int",
      "value": 14n,
    },
    {
      "type": "int",
      "value": 15n,
    },
    {
      "type": "int",
      "value": 16n,
    },
  ],
}
`;

exports[`structs should implement structs correctly 21`] = `
TupleReader {
  "items": [
    {
      "type": "int",
      "value": 1n,
    },
    {
      "type": "int",
      "value": 2n,
    },
    {
      "type": "int",
      "value": 3n,
    },
    {
      "type": "int",
      "value": 4n,
    },
    {
      "type": "int",
      "value": 5n,
    },
    {
      "type": "int",
      "value": 6n,
    },
    {
      "type": "int",
      "value": 7n,
    },
    {
      "type": "int",
      "value": 8n,
    },
    {
      "type": "int",
      "value": 9n,
    },
    {
      "type": "int",
      "value": 10n,
    },
    {
      "type": "int",
      "value": 11n,
    },
    {
      "type": "int",
      "value": 12n,
    },
    {
      "type": "int",
      "value": 13n,
    },
    {
      "type": "int",
      "value": 14n,
    },
    {
      "type": "int",
      "value": 15n,
    },
    {
      "type": "int",
      "value": 16n,
    },
    {
      "type": "int",
      "value": 17n,
    },
    {
      "type": "int",
      "value": 18n,
    },
    {
      "type": "int",
      "value": 19n,
    },
    {
      "type": "int",
      "value": 20n,
    },
    {
      "type": "int",
      "value": 21n,
    },
    {
      "type": "int",
      "value": 22n,
    },
    {
      "type": "int",
      "value": 23n,
    },
    {
      "type": "int",
      "value": 24n,
    },
    {
      "type": "int",
      "value": 25n,
    },
    {
      "type": "int",
      "value": 26n,
    },
    {
      "type": "int",
      "value": 27n,
    },
    {
      "type": "int",
      "value": 28n,
    },
    {
      "type": "int",
      "value": 29n,
    },
    {
      "type": "int",
      "value": 30n,
    },
    {
      "type": "int",
      "value": 31n,
    },
    {
      "type": "int",
      "value": 32n,
    },
  ],
}
`;

exports[`structs should implement structs correctly 22`] = `
TupleReader {
  "items": [
    {
      "type": "int",
      "value": 1n,
    },
    {
      "type": "int",
      "value": 2n,
    },
    {
      "type": "int",
      "value": 3n,
    },
    {
      "type": "int",
      "value": 4n,
    },
    {
      "type": "int",
      "value": 5n,
    },
    {
      "type": "int",
      "value": 6n,
    },
    {
      "type": "int",
      "value": 7n,
    },
    {
      "type": "int",
      "value": 8n,
    },
    {
      "type": "int",
      "value": 9n,
    },
    {
      "type": "int",
      "value": 10n,
    },
    {
      "type": "int",
      "value": 11n,
    },
    {
      "type": "int",
      "value": 12n,
    },
    {
      "type": "int",
      "value": 13n,
    },
    {
      "type": "int",
      "value": 14n,
    },
    {
      "type": "int",
      "value": 15n,
    },
    {
      "type": "int",
      "value": 16n,
    },
    {
      "type": "int",
      "value": 17n,
    },
    {
      "type": "int",
      "value": 18n,
    },
    {
      "type": "int",
      "value": 19n,
    },
    {
      "type": "int",
      "value": 20n,
    },
    {
      "type": "int",
      "value": 1n,
    },
    {
      "type": "int",
      "value": 2n,
    },
    {
      "type": "int",
      "value": 3n,
    },
    {
      "type": "int",
      "value": 4n,
    },
    {
      "type": "int",
      "value": 5n,
    },
    {
      "type": "int",
      "value": 6n,
    },
    {
      "type": "int",
      "value": 7n,
    },
    {
      "type": "int",
      "value": 8n,
    },
    {
      "type": "int",
      "value": 9n,
    },
    {
      "type": "int",
      "value": 10n,
    },
    {
      "type": "int",
      "value": 11n,
    },
    {
      "type": "int",
      "value": 12n,
    },
    {
      "type": "int",
      "value": 13n,
    },
    {
      "type": "int",
      "value": 14n,
    },
    {
      "type": "int",
      "value": 15n,
    },
    {
      "type": "int",
      "value": 1n,
    },
    {
      "type": "int",
      "value": 2n,
    },
    {
      "type": "int",
      "value": 3n,
    },
    {
      "type": "int",
      "value": 4n,
    },
    {
      "type": "int",
      "value": 5n,
    },
    {
      "type": "int",
      "value": 6n,
    },
    {
      "type": "int",
      "value": 7n,
    },
    {
      "type": "int",
      "value": 8n,
    },
    {
      "type": "int",
      "value": 9n,
    },
    {
      "type": "int",
      "value": 10n,
    },
    {
      "type": "int",
      "value": 11n,
    },
    {
      "type": "int",
      "value": 12n,
    },
    {
      "type": "int",
      "value": 13n,
    },
    {
      "type": "int",
      "value": 14n,
    },
    {
      "type": "int",
      "value": 15n,
    },
    {
      "type": "int",
      "value": 16n,
    },
    {
      "type": "int",
      "value": 1n,
    },
    {
      "type": "int",
      "value": 2n,
    },
    {
      "type": "int",
      "value": 3n,
    },
    {
      "type": "int",
      "value": 4n,
    },
    {
      "type": "int",
      "value": 5n,
    },
    {
      "type": "int",
      "value": 6n,
    },
    {
      "type": "int",
      "value": 7n,
    },
    {
      "type": "int",
      "value": 8n,
    },
    {
      "type": "int",
      "value": 9n,
    },
    {
      "type": "int",
      "value": 10n,
    },
    {
      "type": "int",
      "value": 11n,
    },
    {
      "type": "int",
      "value": 12n,
    },
    {
      "type": "int",
      "value": 13n,
    },
    {
      "type": "int",
      "value": 14n,
    },
    {
      "type": "int",
      "value": 15n,
    },
    {
      "type": "int",
      "value": 16n,
    },
    {
      "type": "int",
      "value": 17n,
    },
    {
      "type": "int",
      "value": 18n,
    },
    {
      "type": "int",
      "value": 19n,
    },
    {
      "type": "int",
      "value": 20n,
    },
    {
      "type": "int",
      "value": 21n,
    },
    {
      "type": "int",
      "value": 22n,
    },
    {
      "type": "int",
      "value": 23n,
    },
    {
      "type": "int",
      "value": 24n,
    },
    {
      "type": "int",
      "value": 25n,
    },
    {
      "type": "int",
      "value": 26n,
    },
    {
      "type": "int",
      "value": 27n,
    },
    {
      "type": "int",
      "value": 28n,
    },
    {
      "type": "int",
      "value": 29n,
    },
    {
      "type": "int",
      "value": 30n,
    },
    {
      "type": "int",
      "value": 31n,
    },
    {
      "type": "int",
      "value": 32n,
    },
  ],
}
`;

exports[`structs should implement structs correctly 23`] = `
TupleReader {
  "items": [
    {
      "type": "int",
      "value": 1n,
    },
    {
      "type": "int",
      "value": 2n,
    },
    {
      "type": "int",
      "value": 3n,
    },
    {
      "type": "int",
      "value": 4n,
    },
    {
      "type": "int",
      "value": 5n,
    },
    {
      "type": "int",
      "value": 6n,
    },
    {
      "type": "int",
      "value": 7n,
    },
    {
      "type": "int",
      "value": 8n,
    },
    {
      "type": "int",
      "value": 9n,
    },
    {
      "type": "int",
      "value": 10n,
    },
    {
      "type": "int",
      "value": 11n,
    },
    {
      "type": "int",
      "value": 12n,
    },
    {
      "type": "int",
      "value": 13n,
    },
    {
      "type": "int",
      "value": 14n,
    },
    {
      "type": "int",
      "value": 15n,
    },
    {
      "type": "int",
      "value": 16n,
    },
    {
      "type": "int",
      "value": 17n,
    },
    {
      "type": "int",
      "value": 18n,
    },
    {
      "type": "int",
      "value": 19n,
    },
    {
      "type": "int",
      "value": 20n,
    },
    {
      "type": "null",
    },
    {
      "type": "int",
      "value": 1n,
    },
    {
      "type": "int",
      "value": 2n,
    },
    {
      "type": "int",
      "value": 3n,
    },
    {
      "type": "int",
      "value": 4n,
    },
    {
      "type": "int",
      "value": 5n,
    },
    {
      "type": "int",
      "value": 6n,
    },
    {
      "type": "int",
      "value": 7n,
    },
    {
      "type": "int",
      "value": 8n,
    },
    {
      "type": "int",
      "value": 9n,
    },
    {
      "type": "int",
      "value": 10n,
    },
    {
      "type": "int",
      "value": 11n,
    },
    {
      "type": "int",
      "value": 12n,
    },
    {
      "type": "int",
      "value": 13n,
    },
    {
      "type": "int",
      "value": 14n,
    },
    {
      "type": "int",
      "value": 15n,
    },
    {
      "type": "int",
      "value": 16n,
    },
    {
      "items": [
        {
          "type": "int",
          "value": 1n,
        },
        {
          "type": "int",
          "value": 2n,
        },
        {
          "type": "int",
          "value": 3n,
        },
        {
          "type": "int",
          "value": 4n,
        },
        {
          "type": "int",
          "value": 5n,
        },
        {
          "type": "int",
          "value": 6n,
        },
        {
          "type": "int",
          "value": 7n,
        },
        {
          "type": "int",
          "value": 8n,
        },
        {
          "type": "int",
          "value": 9n,
        },
        {
          "type": "int",
          "value": 10n,
        },
        {
          "type": "int",
          "value": 11n,
        },
        {
          "type": "int",
          "value": 12n,
        },
        {
          "type": "int",
          "value": 13n,
        },
        {
          "type": "int",
          "value": 14n,
        },
        {
          "items": [
            {
              "type": "int",
              "value": 15n,
            },
            {
              "type": "int",
              "value": 16n,
            },
            {
              "type": "int",
              "value": 17n,
            },
            {
              "type": "int",
              "value": 18n,
            },
            {
              "type": "int",
              "value": 19n,
            },
            {
              "type": "int",
              "value": 20n,
            },
            {
              "type": "int",
              "value": 21n,
            },
            {
              "type": "int",
              "value": 22n,
            },
            {
              "type": "int",
              "value": 23n,
            },
            {
              "type": "int",
              "value": 24n,
            },
            {
              "type": "int",
              "value": 25n,
            },
            {
              "type": "int",
              "value": 26n,
            },
            {
              "type": "int",
              "value": 27n,
            },
            {
              "type": "int",
              "value": 28n,
            },
            {
              "items": [
                {
                  "type": "int",
                  "value": 29n,
                },
                {
                  "type": "int",
                  "value": 30n,
                },
                {
                  "type": "int",
                  "value": 31n,
                },
                {
                  "type": "int",
                  "value": 32n,
                },
              ],
              "type": "tuple",
            },
          ],
          "type": "tuple",
        },
      ],
      "type": "tuple",
    },
  ],
}
`;
